--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.2",
     "clsx": "^2.1.1",
+    "leo-profanity": "^1.8.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
